# dummy-with-ci

./: Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  tutorials.md
docs/API/: index.md
src/my_package/: __init__.py  sample.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
